# dm

./: .gitignore  CMakeLists.txt  common.cmake  todo.txt
build_mingw/debug/: run_cmake.cmd  run_make.cmd
build_mingw/release/: run_cmake.cmd
console/: CMakeLists.txt
console/implementation/: main.cpp
engine/: CMakeLists.txt
engine/engine/: iengine.h  iexception.h  impexp.h  istringable.h
engine/implementation/: engine.cpp  engine.h  expression_parser.cpp  expression_parser.h  function_caller.cpp  function_caller.h  template.cpp  template.h
engine/implementation/common/: bracket_utils.cpp  bracket_utils.h  combinations.cpp  combinations.h  exception.cpp  exception.h  function_utils.cpp  function_utils.h  literals.cpp  literals.h  local_array.h  named_entity.cpp  named_entity.h  named_object.cpp  named_object.h  noncopyable.h  operations.cpp  operations.h  qualifier_utils.cpp  qualifier_utils.h  string_utils.cpp  string_utils.h
engine/implementation/expressions/: expression_base.cpp  expression_base.h  expression_calculator.cpp  expression_calculator.h  expression_comparator.cpp  expression_comparator.h  expression_evaluator.cpp  expression_evaluator.h  expression_literal.cpp  expression_literal.h  expression_mover.cpp  expression_mover.h  expression_normalizer.cpp  expression_normalizer.h  expression_operation.cpp  expression_operation.h  expression_param_ref.cpp  expression_param_ref.h  expression_simplifier.cpp  expression_simplifier.h  expression_utils.cpp  expression_utils.h  expression_visitor.cpp  expression_visitor.h  expressions.h
engine/implementation/functions/: function_base.cpp  function_base.h  function_manager.cpp  function_manager.h  function_output.cpp  function_output.h  function_registrator.h
engine/implementation/functions/impl/: function_compare.cpp  function_copy.cpp  function_display.cpp  function_display_all.cpp  function_eval.cpp  function_print.cpp  function_remove.cpp  function_remove_all.cpp  function_table.cpp  function_test.cpp
engine/implementation/variables/: variable.cpp  variable.h  variable_declaration.cpp  variable_declaration.h  variable_manager.cpp  variable_manager.h
gui/: CMakeLists.txt
gui/implementation/: graphic_objects.cpp  graphic_objects.h  main.cpp  sticker.cpp  sticker.h  sticker_objects.cpp  sticker_objects.h  window.cpp  window_class.cpp
test/: expression_base.exp  expression_base.in  expression_normalization.exp  expression_normalization.in  expression_simplification.in  function_compare.exp  function_compare.in  function_copy.exp  function_copy.in  function_display.exp  function_display.in  function_display_all.exp  function_display_all.in  function_eval.exp  function_eval.in  function_eval_base.exp  function_eval_base.in  function_eval_conjunction.exp  function_eval_conjunction.in  function_eval_disjunction.exp  function_eval_disjunction.in  function_eval_equality.exp  function_eval_equality.in  function_eval_implication.exp  function_eval_implication.in  function_eval_negation.exp  function_eval_negation.in  function_eval_plus.exp  function_eval_plus.in  function_print.in  function_remove.exp  function_remove.in  function_remove_all.exp  function_remove_all.in  function_table.exp  function_table.in  function_test.exp  function_test.in  in.txt  normalization.exp  (+12 more)
